--- a/src/styles/media.scss
+++ b/src/styles/media.scss
@@ -1118,6 +1118,17 @@
       max-width: 100%;
       width: 100%;
     }
+    .saleplace__general-trial-inputbox {
+      max-width: 100%;
+    }
+    &__top {
+      &-subtitle {
+        max-width: 100%;
+        width: 100%;
+        justify-content: space-between;
+        padding-bottom: 12px;
+      }
+    }
   }
   .lands {
     &__input {
