--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3748,7 +3748,7 @@
     max-width: 290px;
   }
   &__wrapper {
-    padding-top: 50px;
+    padding-top: 24px;
   }
   &__select {
     max-width: 100%;
@@ -3762,8 +3762,15 @@
   }
   &__top {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    grid-gap: 20px;
+    grid-gap: 20px 32px;
+    .lands__top-title {
+      grid-column: span 3;
+      max-width: 100%;
+      display: flex;
+      justify-content: center;
+    }
     &-btn {
       display: flex;
       grid-gap: 10px;
@@ -3790,6 +3797,17 @@
         line-height: 20px;
         color: #fff;
       }
+    }
+    &-subtitle {
+      color: #12b677;
+      font-size: 20px;
+      @extend %int-500;
+      font-style: normal;
+      line-height: 150%;
+      grid-gap: 32px;
+      display: flex;
+      align-items: center;
+      white-space: nowrap;
     }
   }
   &__inner {
@@ -4311,6 +4329,117 @@
       top: 50%;
       transform: translateY(-50%);
       right: 8px;
+    }
+  }
+  &__items {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 16px;
+    margin-top: 24px;
+    &-item {
+      border-radius: 10px;
+      border: 1px solid #29abe2;
+      padding: 16px;
+      &-top {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding-bottom: 24px;
+      }
+      &-like{
+        cursor: pointer;
+      }
+      &-views {
+        display: flex;
+        align-items: center;
+        grid-gap: 8px;
+        @extend %int-400;
+        font-size: 14px;
+        line-height: 20px;
+        color: #fff;
+      }
+      &-image {
+        margin-bottom: 24px;
+        border-radius: 10px;
+        overflow: hidden;
+        max-height: 204px;
+        height: 100%;
+        animation: slideInFromTop 0.3s ease-out;
+      }
+      &-img {
+        height: 100%;
+        object-fit: cover;
+        transform: scale(1);
+        transition: all 0.2s;
+        &:hover {
+          transform: scale(1.2);
+        }
+      }
+      &-title {
+        color: #fff;
+        font-size: 20px;
+        @extend %int-700;
+        line-height: 20px;
+        text-align: center;
+        margin-bottom: 24px;
+      }
+      &-box {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+      &-user {
+        display: flex;
+        align-items: center;
+        grid-gap: 4px;
+        &-image {
+          overflow: hidden;
+          border-radius: 50%;
+          border: 1px solid #29abe2;
+          img {
+            width: 32px;
+            height: 32px;
+          }
+        }
+        &-name {
+          color: #fff;
+          font-size: 14px;
+          @extend %int-400;
+          line-height: 20px;
+        }
+      }
+      &-bidtime {
+        display: flex;
+        align-items: center;
+        grid-gap: 4px;
+        color: #fff;
+        font-size: 14px;
+        line-height: 20px;
+        @extend %int-400;
+      }
+      &-price {
+        display: flex;
+        align-items: center;
+        grid-gap: 0 14px;
+        margin-top: 16px;
+        &-title {
+          color: #fff;
+          font-size: 16px;
+          @extend %int-500;
+        }
+        &-num {
+          color: #fff;
+          font-size: 20px;
+          @extend %int-500;
+          line-height: 18px;
+        }
+        &-proc {
+          color: #ff0000;
+          font-size: 15px;
+          @extend %int-500;
+          transform: translateY(-5px);
+        }
+      }
     }
   }
 }
